ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  labels:
    app: kong-ingress
  annotations:
    # This annotation is optional since the ingress class will
    # default to "kong" behind the scene.
    # You can validate the right ingress is being used by the
    # `X-Kong-Upstream-Latency` header being added to requests.
    kubernetes.io/ingress.class: kong
    konghq.com/override: configuration-demo
    konghq.com/plugins: auth-custom-plugin
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: echo
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
